# rusty-whisper

./: Cargo.toml
examples/simple_inference/: main.rs
src/: audio.rs  decoder.rs  lib.rs  runner.rs  tokenizers.rs  utils.rs
