[package]
name = "rusty-whisper"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Igor Yusupov"]
readme = "README.md"
keywords = [
    "deep-learning",
    "machine-learning",
    "speech-recognition",
    "whisper",
]
description = "Rust implementation of Whisper"
repository = "https://github.com/igor-yusupov/rusty-whisper/"

exclude = [
    "data/*",
    "weights/*",
]

[lib]
name = "rusty_whisper"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
base64 = "0.21.4"
hound = "3.5.1"
ndarray = "0.16"
ndarray-npy = "0.9"
rayon = "1.8.0"
rustc-hash = "1.1.0"
rustfft = "6.1.0"
tiktoken-rs = "0.5.3"
tract-onnx = "0.21.7"
